# channel_sync

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.yml  config2.yml  environment-dev.yml  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  testing.py  vendorize.toml
docs/: conf.py  index.rst
isoconda/: app.py  channel.py  download_static.py  download_threaded.py  errors.py  filters.py  isoconda.py  matching.py  models.py  processing.py  repo.py  source.py  utils.py
isoconda/models/: channel.py  repo.py  utils.py
isoconda/tests/: test_channels.py  test_records.py  test_repo.py
requirements/: requirements-dev.in  requirements-dev.txt  requirements.txt
src/conda_local/: __init__.py  __main__.py  _typing.py  adapters.py  api.py  core.py  dep_finder.py  deps.py  external.py  graph.py  group.py  grouping.py  output.py  packages.py  patch.py  progress.py  records.py  resolve.py  spinner.py  stream.py  utils.py
src/conda_local/adapt/: channel.py  specification.py
src/conda_local/adapters/: channel.py  package.py  specification.py  subdir.py
src/conda_local/cli/: __init__.py  cmd_diff.py  cmd_merge.py  cmd_patch.py  cmd_sync.py  cmd_verify.py  commands.py  options.py  parameters.py  state.py
src/conda_local/models/: __init__.py  channel.py  package.py  repodata.py  spec.py
src/conda_replicate/: __init__.py  __main__.py  _typing.py  api.py  cli.py  core.py  display.py  output.py  query.py  resolve.py
src/conda_replicate/adapters/: channel.py  package.py  specification.py  subdir.py
src/conda_replicate/cli/: cmds.py  params.py  state.py
src/conda_replicate/resolver/: __init__.py  core.py  graph.py  (+1 more)
src/conda_sync/: __main__.py  cli.py  depends.py  download.py  external.py  packages.py  records.py  solver.py  stream.py  wrapper.py
src/isoconda/: __main__.py  _typing.py  api.py  caching.py  cli.py  filter.py  grouping.py  match.py  models.py  packages.py  repo.py  solver.py  specs.py  stream.py  version.py  wrapper.py
tests/: config.yaml  config.yml  conftest.py  test_api.py  test_api_merge.py  test_api_query.py  test_api_sync.py  test_channels.py  test_dep_finder.py  test_depends.py  test_packages.py  test_records.py  test_resolve.py  test_solver.py  utils.py
tests/adapters/: test_channel.py  test_package.py  test_specification.py
tests/cli/: conftest.py  test_query.py  test_search.py  test_update.py
tests/data/: README.md  numpy_package.json
tests/unit/: test_version.py
(+135 files in other folders)
