[project]
name = "conda-replicate"
version = "0.1"
authors = [
  { name="Charles Swartz", email="charles.w.swartz.vi@gmail.com" },
]
description = "Manage local mirrored anaconda channels."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

[project.scripts]
conda-replicate = "conda_replicate.cli:app"

[project.urls]
"Homepage" = "https://github.com/cswartzvi/conda-replicate"
"Bug Tracker" = "https://github.com/cswartzvi/conda-replicate/issues"
